updated ephost state mgmt by API
